fixes in footer alignment + statistic page + dot image in desktop and mobile.

--- a/src/components/community-segment/sass/community-segment.scss
+++ b/src/components/community-segment/sass/community-segment.scss
@@ -366,6 +366,7 @@
         color: $indgo-color;
         position: relative;
         margin: 0;
+        width:calc(100% - 30px);
     }
 
     .imgright {
